@@ -68,9 +68,9 @@ char *msgs[] = {
 static void gstgap(H * hdr, char *ptr, int ofst)
 {
 	if (ofst > hdr->hole)
-		mfwrd(ptr + hdr->hole, ptr + hdr->ehole, ofst - hdr->hole), vchanged(ptr);
+		mmove(ptr + hdr->hole, ptr + hdr->ehole, ofst - hdr->hole), vchanged(ptr);
 	else if (ofst < hdr->hole)
-		mbkwd(ptr + hdr->ehole - (hdr->hole - ofst), ptr + ofst, hdr->hole - ofst), vchanged(ptr);
+		mmove(ptr + hdr->ehole - (hdr->hole - ofst), ptr + ofst, hdr->hole - ofst), vchanged(ptr);
 	hdr->ehole = ofst + hdr->ehole - hdr->hole;
 	hdr->hole = ofst;
 }
@@ -81,7 +81,7 @@ static void ginsm(H * hdr, char *ptr, int ofst, char *blk, int size)
 {
 	if (ofst != hdr->hole)
 		gstgap(hdr, ptr, ofst);
-	mcpy(ptr + hdr->hole, blk, size);
+	mmove(ptr + hdr->hole, blk, size);
 	hdr->hole += size;
 	vchanged(ptr);
 }
@@ -92,11 +92,11 @@ static void grmem(H * hdr, char *ptr, int ofst, char *blk, int size)
 {
 	if (ofst < hdr->hole)
 		if (size > hdr->hole - ofst)
-			mcpy(blk, ptr + ofst, hdr->hole - ofst), mcpy(blk + hdr->hole - ofst, ptr + hdr->ehole, size - (hdr->hole - ofst));
+			mmove(blk, ptr + ofst, hdr->hole - ofst), mmove(blk + hdr->hole - ofst, ptr + hdr->ehole, size - (hdr->hole - ofst));
 		else
-			mcpy(blk, ptr + ofst, size);
+			mmove(blk, ptr + ofst, size);
 	else
-		mcpy(blk, ptr + ofst + hdr->ehole - hdr->hole, size);
+		mmove(blk, ptr + ofst + hdr->ehole - hdr->hole, size);
 }
 
 /* Header allocation */
@@ -1158,7 +1158,7 @@ B *bcpy(P * from, P * to)
 		if (q->ofst != q->hdr->hole)
 			gstgap(q->hdr, q->ptr, q->ofst);
 		l->nlines = mcnt(q->ptr + q->hdr->ehole, '\n', l->hole = to->ofst - q->ofst);
-		mcpy(ptr, q->ptr + q->hdr->ehole, l->hole);
+		mmove(ptr, q->ptr + q->hdr->ehole, l->hole);
 		vchanged(ptr);
 		vunlock(ptr);
 		enqueb(H, link, &anchor, l);
@@ -1168,7 +1168,7 @@ B *bcpy(P * from, P * to)
 		if (q->ofst != q->hdr->hole)
 			gstgap(q->hdr, q->ptr, q->ofst);
 		l->nlines = mcnt(q->ptr + q->hdr->ehole, '\n', l->hole = SEGSIZ - q->hdr->ehole);
-		mcpy(ptr, q->ptr + q->hdr->ehole, l->hole);
+		mmove(ptr, q->ptr + q->hdr->ehole, l->hole);
 		vchanged(ptr);
 		vunlock(ptr);
 		enqueb(H, link, &anchor, l);
@@ -1177,8 +1177,8 @@ B *bcpy(P * from, P * to)
 			l = halloc();
 			ptr = vlock(vmem, l->seg);
 			l->nlines = q->hdr->nlines;
-			mcpy(ptr, q->ptr, q->hdr->hole);
-			mcpy(ptr + q->hdr->hole, q->ptr + q->hdr->ehole, SEGSIZ - q->hdr->ehole);
+			mmove(ptr, q->ptr, q->hdr->hole);
+			mmove(ptr + q->hdr->hole, q->ptr + q->hdr->ehole, SEGSIZ - q->hdr->ehole);
 			l->hole = GSIZE(q->hdr);
 			vchanged(ptr);
 			vunlock(ptr);
@@ -1191,7 +1191,7 @@ B *bcpy(P * from, P * to)
 			if (to->ofst != to->hdr->hole)
 				gstgap(to->hdr, to->ptr, to->ofst);
 			l->nlines = mcnt(to->ptr, '\n', to->ofst);
-			mcpy(ptr, to->ptr, l->hole = to->ofst);
+			mmove(ptr, to->ptr, l->hole = to->ofst);
 			vchanged(ptr);
 			vunlock(ptr);
 			enqueb(H, link, &anchor, l);
@@ -1264,7 +1264,6 @@ void pcoalesce(P * p)
  *  vunlock
  *  vchanged
  *  vupcount
- *  mcpy	- to copy deleted text
  *  mcnt	- to count NLs
  *  snip	- queue routines
  *  enqueb
@@ -1298,7 +1297,7 @@ static B *bcut(P * from, P * to)
 		/* Store the deleted text */
 		h = halloc();
 		ptr = vlock(vmem, h->seg);
-		mcpy(ptr, from->ptr + from->hdr->ehole, (int) amnt);
+		mmove(ptr, from->ptr + from->hdr->ehole, (int) amnt);
 		h->hole = amnt;
 		h->nlines = nlines;
 		vchanged(ptr);
@@ -1322,7 +1321,7 @@ static B *bcut(P * from, P * to)
 			/* Save deleted text */
 			i = halloc();
 			ptr = vlock(vmem, i->seg);
-			mcpy(ptr, to->ptr, to->hdr->hole);
+			mmove(ptr, to->ptr, to->hdr->hole);
 			i->hole = to->hdr->hole;
 			i->nlines = mcnt(to->ptr, '\n', to->hdr->hole);
 			vchanged(ptr);
@@ -1349,7 +1348,7 @@ static B *bcut(P * from, P * to)
 			/* Save deleted text */
 			h = halloc();
 			ptr = vlock(vmem, h->seg);
-			mcpy(ptr, from->ptr + from->hdr->ehole, SEGSIZ - from->hdr->ehole);
+			mmove(ptr, from->ptr + from->hdr->ehole, SEGSIZ - from->hdr->ehole);
 			h->hole = SEGSIZ - from->hdr->ehole;
 			h->nlines = mcnt(ptr, '\n', h->hole);
 			vchanged(ptr);
@@ -1473,7 +1472,7 @@ static void bsplit(P * p)
 
 		if (p->ofst != p->hdr->hole)
 			gstgap(p->hdr, p->ptr, p->ofst);
-		mcpy(ptr, p->ptr + p->hdr->ehole, SEGSIZ - p->hdr->ehole);
+		mmove(ptr, p->ptr + p->hdr->ehole, SEGSIZ - p->hdr->ehole);
 		hdr->hole = SEGSIZ - p->hdr->ehole;
 		hdr->nlines = mcnt(ptr, '\n', hdr->hole);
 		p->hdr->nlines -= hdr->nlines;
@@ -1519,7 +1518,7 @@ static H *bldchn(char *blk, int size, long *nlines)
 			amnt = SEGSIZ;
 		else
 			amnt = size;
-		mcpy(ptr, blk, amnt);
+		mmove(ptr, blk, amnt);
 		l->hole = amnt;
 		l->ehole = SEGSIZ;
 		(*nlines) += (l->nlines = mcnt(ptr, '\n', amnt));
